solved datagrid height issue on safari

--- a/src/assets/css/containers.css
+++ b/src/assets/css/containers.css
@@ -46,7 +46,13 @@ section {
   flex-grow: 1;
   height: 300px;
   padding: 0;
+  display: flex;
+  flex-direction: column;
   --ag-background-color: var(--blue-light-2) !important;
+  & > div{
+    flex-grow: 1;
+  }
+  
 
   .ag-row {
     color: var(--color-secondary);
